fix footer-modal for open on mobile

--- a/src/sass/_footer-modal.scss
+++ b/src/sass/_footer-modal.scss
@@ -18,7 +18,7 @@
   opacity: 1;
   z-index: 300;
   padding: 20px;
-  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: transform 350ms cubic-bezier(0.4, 0, 0.2, 1);
 
   overflow: hidden;
   overflow-y: auto;
@@ -37,6 +37,7 @@ ul {
 }
 .modal-box {
   max-height: 100%;
+  width: 300px;
   position: absolute;
   padding: 20px;
   overflow-x: hidden;
@@ -85,7 +86,7 @@ ul {
     0px 2px 1px rgba(0, 0, 0, 0.2);
   transition: 255ms $transition-timing-function;
   &:hover {
-    transform: scale(1.1);
+    transform: scale(1.14);
   }
 
   &:not(:last-child) {
